--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-cli": "^1.1.51",
     "prettier": "^1.12.0"
   }
 }
