--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-netlify": "^1.0.19",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "normalize.css": "^8.0.0",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.2.6"
   },
