--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-styled-components": "^2.0.11",
     "normalize.css": "^8.0.0",
     "react-helmet": "^5.2.0",
+    "react-lottie": "^1.2.3",
     "styled-components": "^3.2.6"
   },
   "keywords": [
